Create user session handler with redis
